--- a/03-frontend/base_files/styles.css
+++ b/03-frontend/base_files/styles.css
@@ -10,7 +10,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 20px;
-	background-color: orange;
+	background-color: #333;
 	color: #fff;
 }
 
@@ -78,7 +78,7 @@ footer {
 }
 
 .details-button {
-	background-color: orange;
+	background-color: black;
 	color: #fff;
 	border: none;
 	padding: 10px 20px;
@@ -92,4 +92,10 @@ footer {
 
 .details-button:hover {
 	background-color: #0056b3;
+}
+
+#filter {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
